Bug #83381 --> crash replying to message with long lines r=sspitzer sr=bienvenu a=asa